blog post page font fix for heading and paragraps, fix on memorial page margin on mobile

--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -15,4 +15,4 @@ $color-li-arrow: #61505A;
 $box-shadow: rgba(0,0,0,0.335);
 
 // cards
-$color-card-bg: #0f0f0f;
+$color-card-bg: #000;
