--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,800;1,200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;800&display=swap');
 
-:root {
+/* :root {
   --font: "Montserrat", sans-serif;
   --big-font: "Orbitron", sans-serif;
   --color-bg: #1d1b1b;
@@ -16,7 +16,7 @@
 
   --bg-nav: #282828;
 }
-
+ */
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
@@ -46,6 +46,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   text-size-adjust: none;
+  scroll-behavior: smooth;
 }
 
 article, aside, details, figcaption, figure, footer, header, nav, section, main{
@@ -125,6 +126,17 @@ font-size: 3.5rem;
   }
   @media screen and (max-width: 40em) {
     font-size: 1rem;
+  }
+  }
+
+  h3 {
+    font-size: $font-size-base;
+
+    @media screen and (max-width: 960px) {
+     font-size: $font-size-base * 0.95;
+  }
+  @media screen and (max-width: 40em) {
+    font-size: $font-size-s;
   }
   }
 
