--- a/src/styles/pages/Home.module.scss
+++ b/src/styles/pages/Home.module.scss
@@ -3,7 +3,7 @@
   position: relative;
     width: 100%;
     height: 100%;
-    background: $color-bg;
+    background: transparent;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -146,8 +146,9 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
-      opacity: 0.6;
+      opacity: 0.7;
       z-index: 1;
+
     }
     
     a {
@@ -161,7 +162,7 @@
       text-decoration: none;
       z-index: 2;
     }
-    h3 {
+    h4 {
       margin: 0;
       margin-bottom: 20px;
       color: $color-client-1;
@@ -172,12 +173,14 @@
       z-index: 2;
     }
     span {
-          color: #888;
-          border-radius: 25px;
-          width: 80%;
-          text-align: left;
-          z-index: 2;
-    }
+      color: $color-client-1;
+      border-radius: 0;
+      width: 80%;
+      text-align: left;
+      z-index: 2;
+      height: 100%;
+      width: 100%;
+}
   }
   }
 
